# chain-of-reasoning

./: .gitignore  GEMINI.md  README.md  pyproject.toml  start.ps1  start.sh
.github/: copilot-instructions.md
src/backend/: agent.py  main.py  vector_store.py
src/fastapi/: __init__.py
src/fastapi/testclient/: __init__.py
src/frontend/: app.py
src/langchain/: __init__.py  agents.py  tools.py
src/langchain_community/document_loaders/: __init__.py
src/langchain_community/vectorstores/: faiss.py
src/langchain_core/: __init__.py  output_parsers.py  prompts.py  runnables.py
src/langchain_ollama/: __init__.py
src/langchain_text_splitters/: __init__.py
src/pydantic/: __init__.py
src/tavily/: __init__.py
tests/: test_agent.py  test_main.py
