[tool.poetry]
name = "chain-of-reasoning"
version = "0.1.0"
description = "A proof-of-concept RAG and chain of reasoning application."
authors = ["Gemini"]
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.0.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
langchain = "^0.3.26"
langchain-community = "^0.3.27"
langchain-ollama = "^0.3.6"
ollama = ">=0.5.1,<1.0.0"
streamlit = "^1.32.2"
faiss-cpu = "^1.8.0"
pypdf = "^4.1.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
sentence-transformers = "^2.7.0"
beautifulsoup4 = "^4.12.3"
python-multipart = "^0.0.9"
tavily-python = "^0.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
mypy = "^1.9.0"
pytest = "^7.4.0"
pytest-cov = "^6.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
